--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+requests==2.31.0
+python-dotenv==1.0.0
+numpy==1.26.0
+sounddevice==0.4.6
 cryptography>=42.0.0
 argon2-cffi>=23.1.0
 psutil>=5.9.0  # Optional for advanced monitoring
