--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,3 +9,20 @@
         android:name="android.accessibilityservice"
         android:resource="@xml/accessibility_service_config" />
 </service>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.frost.protocol">
+
+    <application
+        android:hardwareAccelerated="true"
+        android:largeHeap="true" 
+        android:allowBackup="false"
+        android:supportsRtl="true">
+
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        
+    </application>
+
+    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />
+
+</manifest>
