--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,3 +26,15 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />
 
 </manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.frostprotocol.core">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <application
+        android:usesCleartextTraffic="true" 
+        ...>
+        
+        </application>
+</manifest>
