--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ sounddevice==0.4.6
 cryptography>=42.0.0
 argon2-cffi>=23.1.0
 psutil>=5.9.0  # Optional for advanced monitoring
+functions-framework==3.*
+flask==2.*
+requests
